<resources>

    <string name="app_name">Dice Game</string>
    <string name="app_name_long">Privacy Friendly Dice Game</string>

    <!-- Navigation Drawer-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Menu Items-->
    <string name="action_help">Help</string>
    <string name="action_about">About</string>

    <!-- MainActivity-->
    <string name="initial_text">Start by rolling the dice</string>
    <string name="initial_hint" translatable="false">↓</string>
    <string name="roll_button">Roll the Dice</string>
    <string name="new_round_button">New Round</string>
    <string name="final_round">Final result</string>
    <string name="round_headline">Round:</string>
    <string name="initial_round" translatable="false">0</string>
    <string name="reset" translatable="false">↺</string>

    <!-- AboutFragment-->
    <string name="about">About</string>
    <string name="version_number">Version</string>
    <string name="about_author_names">Karola Marky and contributors.</string>
    <string name="about_affiliation">In affiliation with</string>
    <string name="privacy_friendly">This application belongs to the group of Privacy Friendly Apps developed by Karlsruhe Institute of Technology. Sourcecode licensed under GPLv3. Images copyright KIT and Google Inc.</string>
    <string name="more_info">More information can be found on:</string>
    <string name="github" translatable="false"><a href="https://github.com/SecUSo/privacy-friendly-dice-game">Github-Repo</a></string>
    <string name="url" translatable="false"><a href="https://www.secuso.org/pfa">SECUSO-Website</a></string>

    <!-- HelpFragment-->
    <string name="help_privacy_heading">Privacy Info</string>
    <string name="help_permissions_heading">Permissions</string>
    <string name="help_permissions_description">Privacy Friendly Dice Game does not require any permissions.</string>

    <string name="help_rules_heading">Dice Game Rules</string>
    <string name="help_rules_description">In each round a player gets up to three rolls of dice. The player can lock the dice that should be saved by pressing them.</string>

    <string name="help_reset_heading">↺ Button</string>
    <string name="help_reset">Reseting the round counter to one.</string>

    <!-- Tutorials global-->
    <string name="confirm_button">Got it</string>
    <string name="help_button">View Help</string>

    <!-- Tutorials specific-->
    <string name="tutorial_yahtzee_title">Play</string>
    <string name="tutorial_yahtzee_description">Welcome to Dice Game! Dice can be (un)locked by pressing. </string>

    <string name="dialog_goodbye_google_title">Goodbye Google Play Store 😢</string>
    <string name="dialog_goodbye_google_desc">
        Our apps will have to say good-bye to the Google Play Store at the midst of March 2025. You can find more info about the reasons and why this isn’t the end of the Privacy Friendly Apps on our website:\n

        <a href="https://secuso.aifb.kit.edu/2809.php">Click here to learn more</a>
    </string>
    <string name="dialog_goodbye_google_deactivate_notice">Don\'t show this notice again.</string>
	<string name="dialog_goodbye_google_title">Goodbye Google Play __</string>
	<string name="dialog_goodbye_google_desc">Our apps will have to say goodbye to Google Play. You can continue to use the app but you will not receive any updates in the future.
You can find more info about the reasons and why this isn_t the end of the Privacy Friendly Apps on our website:

<a href="https://secuso.aifb.kit.edu/english/2809.php">Click here to learn more</a>
	</string>
	<string name="dialog_goodbye_google_deactivate_notice">Don\'t show this notice again.</string>
</resources>
