<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="org.secuso.privacyfriendlyyahtzeedicer.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <GridLayout
        android:id="@+id/numbers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:columnCount="3"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_dice_one"
            android:layout_margin="10dp"
            android:background="@drawable/dice"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/button_dice_two"
            android:layout_margin="10dp"
            android:background="@drawable/dice"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/button_dice_three"
            android:layout_margin="10dp"
            android:background="@drawable/dice"
            android:textAllCaps="false" />

    </GridLayout>

    <RelativeLayout
        android:id="@+id/dice_frame"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignBottom="@+id/numbers"
        android:layout_alignEnd="@+id/numbers"
        android:layout_alignLeft="@+id/numbers"
        android:layout_alignRight="@+id/numbers"
        android:layout_alignStart="@+id/numbers"
        android:layout_alignTop="@+id/numbers"></RelativeLayout>

    <GridLayout
        android:id="@+id/rowTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/numbers"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:columnCount="2"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_dice_four"
            android:layout_margin="10dp"
            android:background="@drawable/dice"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/button_dice_five"
            android:layout_margin="10dp"
            android:background="@drawable/dice"
            android:textAllCaps="false" />

    </GridLayout>

    <RelativeLayout
        android:id="@+id/dice_frame_second"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignBottom="@+id/rowTwo"
        android:layout_alignEnd="@+id/rowTwo"
        android:layout_alignLeft="@+id/rowTwo"
        android:layout_alignRight="@+id/rowTwo"
        android:layout_alignStart="@+id/rowTwo"
        android:layout_alignTop="@+id/rowTwo"></RelativeLayout>

    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:text="@string/final_round"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textSize="40sp"
        android:layout_below="@+id/rowTwo"
        android:layout_centerHorizontal="true" />

    <RelativeLayout
        android:id="@+id/resetArea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rowTwo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="124dp">

        <TextView
            android:id="@+id/roundCounterTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:text="@string/round_headline"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/roundTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:layout_toEndOf="@+id/roundCounterTextView"
            android:layout_toRightOf="@+id/roundCounterTextView"
            android:text="@string/initial_round"
            android:textSize="18sp" />

        <Button
            android:id="@+id/resetButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/roundTextView"
            android:layout_toRightOf="@+id/roundTextView"
            android:background="@drawable/inactive_button"
            android:text="@string/reset"
            android:textColor="@color/white" />

    </RelativeLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/roll_button"
        android:text="@string/roll_button"
        android:textColor="@color/white"
        android:elevation="10dp"
        android:textSize="@dimen/text_size"
        android:layout_alignParentBottom="true" />
</RelativeLayout>
